# dsagent-ralph

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.jupyter  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial.py
docs/: UI_INTEGRATION.md
src/dsagent/: __init__.py  client.py  config.py  main.py
src/dsagent/agents/: conversational.py  evaluator.py  executor.py  planner.py  ralph.py
src/dsagent/api/: deps.py
src/dsagent/api/routes/: chat.py  hitl.py  items.py  kernel.py  plans.py  projects.py
src/dsagent/db/: models.py  repositories.py  schemas.py  session.py
src/dsagent/services/: kernel.py  kernel_manager.py
src/dsagent/skills/: base.py  implementations.py
